# server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: ci-cd.yml
src/: database.rs  env.rs  lib.rs  log.rs  main.rs  storage.rs  util.rs  webserver.rs
src/database/: database.rs  mock_database.rs
src/model/: session.rs  user.rs
src/storage/: init_storage_error.rs  storage_content.rs
src/test/webserver/: auth.rs
src/test/webserver/auth/: authenticated_user.rs
src/webserver/: app_state.rs  jwt.rs  router.rs
src/webserver/router/: auth.rs  browse.rs  create_directory.rs  dashboard.rs  download.rs  upload.rs
src/webserver/router/auth/: authenticated_user.rs  login.rs  logout.rs  refresh.rs  register.rs
