[package]
name = "my-file-cloud-server"
version = "0.1.0"
edition = "2024"

[features]
default = ["mock_db"]
mock_db = []
db = []

[dependencies]
my-file-cloud-api = { git = "https://github.com/my-file-cloud/api.git", tag = "v0.1.0" }
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tower-cookies = "0.11"
argon2 = "0.6.0-rc.7"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
tokio-util = { version = "0.7", features = ["full"] }
futures = "0.3"
zip = "8"
walkdir = "2.5"
bytes = "1.11"
tower-http = { version = "0.6", features = ["cors"] }
sqlx = { version = "0.8", features = ["mysql", "runtime-tokio-native-tls", "macros"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
dotenvy = "0.15"

[patch."https://github.com/my-file-cloud/api.git"]
my-file-cloud-api = { path = "../api" }